# pytorch-rust-test

./: .gitattributes  Cargo.toml  model.pt
libtorch/: build-hash  build-version
libtorch/include/ATen/: CUDAFunctions_inl.h  Functions.h  NativeFunctions.h  NativeMetaFunctions.h  Operators.h  RedispatchFunctions.h  RegistrationDeclarations.h  VmapGeneratedPlumbing.h
libtorch/include/ATen/core/: aten_interned_strings.h
libtorch/include/ATen/ops/: _efficient_attention_backward.h  _efficient_attention_backward_cuda_dispatch.h  _efficient_attention_backward_native.h  _efficient_attention_backward_ops.h  _efficient_attention_forward.h  _efficient_attention_forward_cuda_dispatch.h  _efficient_attention_forward_native.h  _efficient_attention_forward_ops.h
src/: main.rs
